--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,8 @@
     <hr>
     <div id="portfolioGrid">
   <figure>
-      <img src="assets/images/technics-q-c-250-200-1.jpg" alt="Image depicting Hangman game">
+      <a href="https://rls5113.github.io/word-guess-game/">
+      <img src="assets/images/technics-q-c-250-200-1.jpg" alt="Image depicting Hangman game"></a>
       <div class="imgBanner">Hangman</div>
   </figure>
   <figure>
