provide link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,8 @@
            <div class="imgBanner">RPG Game</div>
   </figure>
   <figure>
-      <img src="assets/images/technics-q-c-250-200-3.jpg" alt="Image depicting Trivia game">
+      <a href="https://rls5113.github.io/triviagame/">
+          <img src="assets/images/technics-q-c-250-200-3.jpg" alt="Image depicting Trivia game"></a>
       <div class="imgBanner">Trivia Game</div>
   </figure>
   <figure>
