add giftastic link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,11 @@
       <div class="imgBanner">Rutgers Info Widget</div>
   </figure>
   <figure>
+    <a href="https://rls5113.github.io/giftastic/">
+    <img src="assets/images/technics-q-c-250-200-4.jpg" alt="Image depicting Giffy"></a>
+    <div class="imgBanner">Gif-Tastic</div>
+  </figure>
+  <figure>
       <img src="assets/images/technics-q-c-250-200-6.jpg" alt="Image depicting Rock Paper Scissors game">
       <div class="imgBanner">Rock Paper Scissors</div>
   </figure>          
